--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.9.0'
     compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.2.1'
+    compile group: 'org.apache.hbase', name: 'hbase-client', version: '1.4.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
